--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "webgriffe/theme-frontend-bootstrap",
     "description": "N/A",
     "require": {
-        "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.3.9",
+        "php": ">=5.3.3",
         "magento/framework": "*",
         "webgriffe/theme-frontend-bootstrap": "^1.0"
     },
